# fastapi_user_registration_production

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  user_registration_api.md
config/: settings.py
docs/: architecture.md
docs/diagrams/: activation-sequence.mmd  architecture-layers.mmd  deployment-containers.mmd  multi-worker-architecture.mmd  observability-architecture.mmd  registration-sequence.mmd
src/: main.py
src/application/: activate_user.py  email_service.py  register_user.py
src/domain/: activation_code.py  exceptions.py  user.py  user_repository.py
src/infrastructure/database/: connection.py  postgres_user_repository.py
src/infrastructure/email/: smtp_email_service.py
src/infrastructure/email/templates/: activation_code.html  activation_code.txt
src/infrastructure/observability/: __init__.py  metrics_middleware.py  redis_metrics_storage.py
src/infrastructure/rate_limiting/: __init__.py  dependencies.py  middleware.py  redis_rate_limiter.py
src/infrastructure/tasks/: celery_config.py
src/infrastructure/tasks/email/: tasks.py
src/presentation/: dependencies.py  routes.py  schemas.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/e2e/features/: environment.py  user_registration_e2e.feature
tests/e2e/features/steps/: user_registration_e2e_steps.py
tests/e2e/helpers/: __init__.py  mailhog_client.py
tests/integration/: conftest.py  test_user_activation.py  test_user_registration.py
tests/mocks/: mock_task_queue.py
tests/unit/: test_activate_user_use_case.py  test_activation_code.py  test_register_user_use_case.py  test_routes.py  test_schemas.py  test_user.py
